--- a/pom.xml
+++ b/pom.xml
@@ -140,10 +140,14 @@
                 <version>1.6.6</version>
                 <extensions>true</extensions>
                 <configuration>
-                    <serverId>usbr-component</serverId>
-                    <nexusUrl>${MAVEN_URL_RELEASES}</nexusUrl>
-<!--                    <stagingProfileId>b34f19b9cc6224</stagingProfileId>-->
+                    <skipNexusStagingDeployMojo>true</skipNexusStagingDeployMojo>
                 </configuration>
+                <executions>
+                    <execution>
+                        <id>default-deploy</id>
+                        <phase>none</phase>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
